fix: adjust navigation styles for improved layout and spacing

--- a/admin_console/styles/nav.css
+++ b/admin_console/styles/nav.css
@@ -149,7 +149,7 @@ body nav {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: space-evenly;
+  justify-content: space-around;
   height: 99vh;
   width: 100%;
   backdrop-filter: blur(15px);
@@ -159,7 +159,7 @@ body nav {
   padding: 1em;
   transform: translateY(-50%);
   border-radius: 1em;
-  gap: 1em;
+  gap: 0.5em;
   width: 70px;
   z-index: 999;
   box-shadow: var(--shadow-color);
